fix: not updating PostEntity.favoredBy when favorite/unfavorite posts