@@ -3,6 +3,7 @@ package com.locarie.backend.datacreators.post;
 import com.locarie.backend.datacreators.user.UserEntityCreator;
 import com.locarie.backend.domain.entities.PostEntity;
 import com.locarie.backend.domain.entities.UserEntity;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -14,7 +15,7 @@ public class PostEntityCreator {
         .user(user)
         .title("On as weekend spesh: Pistachio frangi & orange curd" + " \uD83C\uDF4A\uD83E\uDDE1")
         .content("On all week: Our Apple & Custard Danish! \uD83C\uDF4F\uD83D\uDC9A")
-        .imageUrls(List.of("https://i.ibb.co/82Qw0Tb/Jolene-Hornsey-Post1-1.jpg"))
+        .imageUrls(new ArrayList<>(List.of("https://i.ibb.co/82Qw0Tb/Jolene-Hornsey-Post1-1.jpg")))
         .build();
   }
 
@@ -26,9 +27,10 @@ public class PostEntityCreator {
         .title("Jaffa Cake & Sunday lunch \uD83E\uDDE1")
         .content("Today's delight")
         .imageUrls(
-            Arrays.asList(
-                "https://i.ibb.co/b7fyLTq/Jolene-Hornsey-Post-2-1.jpg",
-                "https://i.ibb.co/cYw3z26/Jolene-Hornsey-Post-2-2.jpg"))
+            new ArrayList<>(
+                List.of(
+                    "https://i.ibb.co/b7fyLTq/Jolene-Hornsey-Post-2-1.jpg",
+                    "https://i.ibb.co/cYw3z26/Jolene-Hornsey-Post-2-2.jpg")))
         .build();
   }
 
@@ -39,7 +41,7 @@ public class PostEntityCreator {
         .user(user)
         .title("Shreeji Post 1")
         .content("Shreeji Post 1 Content")
-        .imageUrls(Arrays.asList("image-url-1", "image-url-2"))
+        .imageUrls(new ArrayList<>(List.of("image-url-1", "image-url-2")))
         .build();
   }
 
@@ -50,7 +52,7 @@ public class PostEntityCreator {
         .user(user)
         .title("Shreeji Post 2")
         .content("Shreeji Post 2 Content")
-        .imageUrls(Arrays.asList("image-url-1", "image-url-2"))
+        .imageUrls(new ArrayList<>(Arrays.asList("image-url-1", "image-url-2")))
         .build();
   }
 }
